<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_popup" translatable="false">Bad Request</string>
    <string name="title_activity_multi_type_lazy_column">MultiTypeLazyColumn</string>

    <string name="home">Trang chủ</string>
    <string name="favorite">Yêu thích</string>
    <string name="settings">Cài đặt</string>
    <string name="category">Danh mục</string>
    <string name="cart">Giỏ hàng</string>
    <string name="profile">Cá nhân</string>
    <string name="share">Chia sẻ</string>

    <string name="ezbuy">Ezbuy</string>
    <string name="logo">ezbuy</string>
    <string name="success">Thành công</string>
    <string name="ezbuy_buy_online">Ứng dụng mua sắp trực</string>
    <string name="dialog_image">Hình Ảnh Hộp Thoại</string>
    <string name="truy_n_ezbuy">tuyến Ezbuy</string>
    <string name="have_an_account">Tôi thực sự đã có tài khoản</string>
    <string name="experience_now">Trải nghiệm ngay</string>
    <string name="successful_sign_in">Tài khoản của bạn đã sẵn sàng sử dụng. Bạn sẽ được chuyển hướng đến Trang Chính trong vài giây.</string>
    <string name="congratulations">Chúc Mừng!</string>
    <string name="error">Lỗi</string>
    <string name="wellcome_ezbuy">Chào mừng đến với Ezbuy</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="letsgo">Đi</string>
    <string name="login">Đăng nhập</string>
    <string name="signup_now">Chưa có tài khoản?</string>
    <string name="signup_now_right">tạo ngay</string>

</resources>
