<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".StartFragment">

    <ImageView
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="171dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        style="@style/white_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="114dp"
        android:gravity="center"
        android:text="@string/ezbuy"
        android:textSize="52sp"
        android:textStyle="bold" />

    <TextView
        style="@style/white_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/ezbuy_buy_online"
        android:textSize="19sp" />

    <TextView
        style="@style/white_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/truy_n_ezbuy"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingBottom="10dp"
        android:weightSum="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startBtn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_input"
            android:backgroundTint="#004CFF"
            android:elevation="0dp"
            android:gravity="center"
            android:shadowRadius="0"
            android:stateListAnimator="@null"
            android:text="@string/experience_now"
            android:textAllCaps="false"
            android:textColor="#F3F3F3"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/signupStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/have_an_account"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/ezbuy"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
