<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".home.auth.signinwithpassword.LoginFragment">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="240dp"
        android:layout_height="282dp"
        android:src="@drawable/ic_upper_left_corner_01"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="164dp"
        android:layout_height="194dp"
        android:src="@drawable/ic_upper_left_corner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="80dp"
        android:layout_height="192dp"
        android:src="@drawable/ic_center_right_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <TextView
        style="@style/white_black"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="168dp"
        android:text="@string/login"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        style="@style/white_black"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wellcome_ezbuy"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.037" />

    <ImageView
        android:layout_width="26dp"
        android:layout_height="24dp"
        android:src="@drawable/wishlist"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_input"
        android:drawableStart="@drawable/message"
        android:drawablePadding="15dp"
        android:drawableTint="@color/inactive_input"
        android:hint="@string/email_hint"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColor="@color/text_color"
        android:textColorHint="@color/inactive_input"
        android:textFontWeight="600"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rounded_input"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="15dp"
            android:drawableTint="@color/inactive_input"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="35dp"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textColorHint="@color/inactive_input"
            android:textFontWeight="600"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/showHidePassword"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:scaleType="center"
            android:src="@drawable/dark_theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/inactive_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInBtn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40sp"
            android:background="@drawable/rounded_input"
            android:backgroundTint="#004CFF"
            android:elevation="0dp"
            android:gravity="center"
            android:shadowRadius="0"
            android:stateListAnimator="@null"
            android:text="@string/letsgo"
            android:textAllCaps="false"
            android:textColor="#F3F3F3"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/notAccountSignupNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <TextView
                style="@style/white_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/signup_now"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:textColor="@color/red"
                android:text="@string/signup_now_right"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
